Fixing small layout bug on the fade carousel. Small re-factor of calling the simplfade plugin

--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -463,7 +463,7 @@ button {
     &.prev {
       position: absolute;
       top: 0;
-      width: 100%;
+      width: auto;
     }  
   }
 }
